--- a/index.html
+++ b/index.html
@@ -254,19 +254,11 @@ my profile as a whole.
               <h5>August 2021 - May 2022</h5>
               <p><em>Bangalore, India</em></p>
               <ul>
-                <li>This Project is based upon building a cybersecurity solution using SRDF 
-(Symmetric Remote Data Facility) named as Air Gap Solution.</li>
+                <li>This Project is based upon building a cybersecurity solution using SRDF (Symmetric Remote Data Facility) named as Air Gap Solution.</li>
                 <li>It is a cyber-resiliency solution built using Ansible language to protect data on powermax (A dell product) </li>
                 <li>It uses Rest APIs call in the background which majorly focuses on how to avoid cyberthreats</li>
-                <li>his solution is mainly for those clients of DELL who need a platform where they find a 
-feasible solution plan to protect their data from cyberattacks. This project is aiming to 
-shield data from malicious users by securing the network using Air Gap Solution.
-After having a cyber-attack, this solution will continue the business by making 
-the vault/secondary array as the server of data by connecting to the hosts or 
-restoring the data back to the primary one after its recovery.</li>
-		      <li>The project revolves around safeguarding the critical data of clients from 
-breaches and ransomware by inheriting the data from source host to R1 symmetric 
-array, which is then connected to secondary R2 symmetric array and its hosts.</li>
+                <li>his solution is mainly for those clients of DELL who need a platform where they find a feasible solution plan to protect their data from cyberattacks. This project is aiming to shield data from malicious users by securing the network using Air Gap Solution.After having a cyber-attack, this solution will continue the business by making the vault/secondary array as the server of data by connecting to the hosts or restoring the data back to the primary one after its recovery.</li>
+		<li>The project revolves around safeguarding the critical data of clients from breaches and ransomware by inheriting the data from source host to R1 symmetric array, which is then connected to secondary R2 symmetric array and its hosts.</li>
               </ul>
             </div>
             <div class="resume-item">
